kubernetes/apps/elastic/kibana/app/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: kibana
  namespace: elastic
spec:
  hosts:
    - kibana.${SECRET_DOMAIN}
  gateways:
    - istio-ingress/external-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: kibana-kb-http.elastic.svc.cluster.local
            port:
              number: 5601
